# nix-password-checker

./: CMakeLists.txt  README.md  pass.cpp  password_checker.cpp
conf/: application.cfg
src/: CMakeLists.txt  main.cpp  password_checker.cpp  password_checker.hpp
